<resources>
    <string name="app_name" translatable="false">Noncha</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="rooms">Rooms:</string>
    <string name="create_new_room">Create new room:</string>
    <string name="private_room">Private</string>
    <string name="room_name">Room name</string>
    <string name="create_room">Create room</string>
    <string name="secret_code">Secret code</string>
    <string name="some_error">Some error occured</string>
    <string name="send">SEND</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="room_is_private">Room is private</string>
    <string name="room_description">Room description</string>
</resources>
