<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_shape">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/empty_view"
        android:visibility="gone"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/animate_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/roomNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_new_room"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/private_check_box"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:buttonTint="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:text="@string/private_room"
                android:checked="false"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/private_check_box"
                android:layout_height="wrap_content"
                app:passwordToggleContentDescription="description"
                app:passwordToggleEnabled="false" >

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:textColorLink="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:shadowColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorHighlight="@color/colorPrimary"
                    app:backgroundTint="@color/colorPrimary"
                    android:hint="@string/room_name"
                    android:inputType="textCapWords"/>

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/private_check_box"
            android:layout_height="wrap_content"
            app:passwordToggleContentDescription="description"
            app:passwordToggleEnabled="false" >

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/desc_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/room_description"
                android:textColorLink="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:shadowColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimary"
                android:maxLength="200"
                android:inputType="textCapSentences"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/code_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:passwordToggleContentDescription="description"
            app:passwordToggleEnabled="true" >

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:textColorLink="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:shadowColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimary"
                android:hint="@string/secret_code"
                android:inputType="numberPassword"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add_room_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/room_round"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/create_room"/>
</RelativeLayout>